compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__missing_constructor_arguments.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1747
expression: "\npub type A {\n  A(Int)\n}\n\nconst a = A()\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type A {
  A(Int)
}

const a = A()


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:6:12
  │
6 │ const a = A()
  │            ^^ I was expecting arguments here

A record must be passed arguments when constructed.
