compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__missing_type_constructor_arguments_in_type_definition.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1761
expression: "\npub type A() {\n  A(Int)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type A() {
  A(Int)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:11
  │
2 │ pub type A() {
  │           ^^ I was expecting generic parameters here

A generic type must have at least a generic parameter.
Hint: If a type is not generic you should omit the `()`.
