compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__multiple_external_for_same_project_erlang.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 685
expression: "\n@external(erlang, \"one\", \"two\")\n@external(erlang, \"three\", \"four\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "two")
@external(erlang, "three", "four")
pub fn one(x: Int) -> Int {
  todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @external(erlang, "three", "four")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
