compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__multiple_internal_attributes.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 787
expression: "\n@internal\n@internal\npub fn main() -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
@internal
pub fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @internal
  │ ^^^^^^^^^ Duplicate attribute

This attribute has already been given.
